force-app/main/default/objects/Purge_Log__c/Purge_Log__c.object-meta.xml
<CustomObject>
    <label>Purge Log</label>
    <nameField>
        <displayFormat>PL-{00000}</displayFormat>
        <label>Purge Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purge Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>