force-app/main/default/objects/Purge_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SObject_Type__c</columns>
    <columns>Purge_Date__c</columns>
    <columns>Record_Id__c</columns>
    <columns>Parent_Id__c</columns>
    <columns>Case_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>