force-app/main/default/objects/Purge_Log__c/listViews/ALL_purge_logs.listView-meta.xml
<ListView>
    <fullName>ALL_purge_logs</fullName>
    <columns>NAME</columns>
    <columns>SObject_Type__c</columns>
    <columns>Purge_Date__c</columns>
    <columns>Record_Id__c</columns>
    <columns>Parent_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SObject_Type__c</field>
        <operation>equals</operation>
        <value>EmailMessage</value>
    </filters>
    <label>ALL purge logs</label>
</ListView>